# exteplayer3

./: Makefile.am  README.md  autogen.sh  configure.ac
.github/workflows/: build.yml
include/: output.h
main/: exteplayer.c
output/: dream_audio.c  dream_video.c  linuxdvb_mipsel.c  output.c
output/writer/mipsel/: h264.c
